added support for coveralls

--- a/tox.ini
+++ b/tox.ini
@@ -2,11 +2,15 @@
 envlist = py{27,34,py}-django{17,18,19,110}
 
 [testenv]
+passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
 deps =
     Pillow
+    coveralls
     django17: Django>=1.7,<1.8
     django18: Django>=1.8,<1.9
     django19: Django>=1.9,<1.10
     django110: Django==1.10
 
-commands = python setup.py test
+commands =
+    coverage run --source=overwrite_storage setup.py test
+    coveralls
