--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,9 @@
 [tox]
-envlist = py{27,34,py}-django{17,18,19,110}
+envlist =
+    py27-django{17,18,19,110}
+    py34-django{17,18,19,110}
+    py35-django{18,19,110}
+    pypy-django{17,18,19,110}
 
 [testenv]
 passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
